feature(refs T29168):  remove statement pdf overview chart from overview
- Since this component will be addonized too, this part can be deleted in the first step, so this PR will not break ewm or blp.
- In the next step the component will be re-added as umd.js file and will be imported dynamically as addon

--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_dashboard.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_dashboard.html.twig
@@ -112,88 +112,7 @@
                     {% endif %}
                 {% endif %}
 
-                {# import statements from files #}
-                {% if hasPermission('feature_import_statement_pdf') %}
-                    {% set intermediateReviewCount = templateVars.statusPercentageDistribution.absolutes.boxes_review %}
-                    {% set manualReviewCount = intermediateReviewCount + templateVars.statusPercentageDistribution.absolutes.text_review %}
-                    {% set pendingPercentage = templateVars.statusPercentageDistribution.percentages.pending %}
-                    {% set pendingCount = templateVars.statusPercentageDistribution.absolutes.pending %}
-                    {% set readyToReviewPercentage = templateVars.statusPercentageDistribution.percentages.readyToReview %}
-                    {% set readyToReviewCount = templateVars.statusPercentageDistribution.absolutes.readyToReview %}
-                    {% set reviewedPercentage = templateVars.statusPercentageDistribution.percentages.reviewed %}
-                    {% set reviewedCount = templateVars.statusPercentageDistribution.absolutes.reviewed %}
-                    {% set readyToConvertPercentage = templateVars.statusPercentageDistribution.percentages.readyToConvert %}
-                    {% set readyToConvertCount = templateVars.statusPercentageDistribution.absolutes.readyToConvert %}
-                    {% set convertedPercentage = templateVars.statusPercentageDistribution.percentages.converted %}
-                    {% set convertedCount = templateVars.statusPercentageDistribution.absolutes.converted %}
-                    {% set annotatedStatementPdfCount = templateVars.statusPercentageDistribution.total %}
-
-                    <div class="box-shadow-1 space-inset-m space-stack-s">
-                        <h4 class="weight--bold">
-                            {{ 'import.statements.fromPdf'|trans }}
-                        </h4>
-
-                        {% if annotatedStatementPdfCount > 0 %}
-                            <p class="cf">
-                                {{ annotatedStatementPdfCount }} {{ annotatedStatementPdfCount == 1 ? 'uploaded.file'|trans : 'uploaded.files'|trans }}
-                                {% if manualReviewCount > 0 %}
-                                    ({{ manualReviewCount }} {{ manualReviewCount == 1 ? 'file'|trans : 'files'|trans }} {{ 'processing.lowercase'|trans }})
-                                    <dp-contextual-help
-                                        class="float--right u-mt-0_125"
-                                        :text="Translator.trans('statements.import.hint')">
-                                    </dp-contextual-help>
-                                {% endif %}
-                            </p>
-
-                            <table class="text--center">
-                                <tr class="font-size-large">
-                                    <td class="c-chart__flow c-chart__flow-color-6-2 width-20p">{{ pendingCount }}</td>
-                                    <td class="c-chart__flow c-chart__flow-color-6-3 width-20p">{{ readyToReviewCount }}</td>
-                                    <td class="c-chart__flow c-chart__flow-color-6-4 width-20p">{{ reviewedCount }}</td>
-                                    <td class="c-chart__flow c-chart__flow-color-6-5 width-20p">{{ readyToConvertCount }}</td>
-                                    <td class="c-chart__flow c-chart__flow-color-6-6 width-20p color--white">{{ convertedCount }}</td>
-                                </tr>
-                                <tr class="u-valign--top">
-                                    <td class="u-pt-0_25">{{ 'import.process.running'|trans }}</td>
-                                    <td class="u-pt-0_25">{{ 'import.process.ready.for.review'|trans }}</td>
-                                    <td class="u-pt-0_25">{{ 'import.process.generating.text'|trans }}</td>
-                                    <td class="u-pt-0_25">{{ 'import.process.ready.for.approval'|trans }}</td>
-                                    <td class="u-pt-0_25">{{ 'import.process.finished'|trans }}</td>
-                                </tr>
-                            </table>
-                        {% else %}
-                            <p>
-                                {{ 'statements.imported.none'|trans }}
-                            </p>
-                        {% endif %}
-
-                        {{ uiComponent('layout.horizontal', {
-                            align: 'right',
-                            gutter: '1',
-                            items: [
-                                uiComponent('button', {
-                                    attributes: ['data-cy=filesUpload'],
-                                    href: path('DemosPlan_procedure_import', { 'procedureId': procedure, '_fragment': 'StatementPdfImport' }),
-                                    text: 'files.upload'|trans
-                                }),
-                                uiComponent('button', {
-                                    attributes: ['data-cy=recheck'],
-                                    disabled: readyToReviewCount == 0 or templateVars.nextAnnotatedStatementId is null,
-                                    href: path('dplan_annotated_statement_pdf_review', { 'procedureId': procedure, 'documentId': templateVars.nextAnnotatedStatementId|default('null') }),
-                                    text: 'recheck'|trans ~ ' (' ~ readyToReviewCount ~ ')',
-                                    variant: 'outline'
-                                }),
-                                uiComponent('button', {
-                                    attributes: ['data-cy=importConfirm'],
-                                    disabled: readyToConvertCount == 0 or templateVars.nextAnnotatedStatementToConvert is null,
-                                    href: path('dplan_convert_annotated_pdf_to_statement', { 'procedureId': procedure, 'documentId': templateVars.nextAnnotatedStatementToConvert|default('null') }),
-                                    text: 'import.confirm'|trans ~ ' (' ~ readyToConvertCount ~ ')',
-                                    variant: 'outline'
-                                })
-                            ]
-                        }) }}
-                    </div>
-                {% endif %}
+                {# TODO: add addonized overview component for imported pdf statements here #}
 
                 {# statement charts - segmentation status, number of segments with recommendations #}
                 {% if hasPermission('area_statement_segmentation') %}
