chore(refs T29425): Rename CSS-Class
The Class is supposed to stay on the alternative BG Color
which is not alwys dark. That can be missleading

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_link.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_link.scss
@@ -47,7 +47,7 @@
     }
 
     // Assuming links on $dp-color-alt
-    &--on-dark {
+    &--on-alt {
         color: $dp-color-white;
         text-decoration: underline;
 
