feat(T29399): Remove the new trans keys to use the keys from `tag`, add `id` in fields by fetching the list, align the button-row left instead taking the default
If you dont add 'id' in fields you get an error sending a request by editing the institutionTag.

--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/institution_tag_management.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/institution_tag_management.html.twig
@@ -2,7 +2,7 @@
 
 {% block component_part %}
     {% include '@DemosPlanProcedure/DemosPlanProcedure/includes/administration_list_pageheader.html.twig' with {
-        heading: 'institution.tag.administrate'|trans,
+        heading: 'tag.administrate'|trans,
         highlighted: 'admin_procedures'
     } %}
 
