feat(refs T29158): Rollback map implementation
Since Deges sees no use in map features for a statement, the implementation is rolled back. Instead the map features will be implemented for segments.

--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_import.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_import.html.twig
@@ -31,5 +31,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['ol.js', 'procedure-administrationImport.js']) }}
+    {{ webpackBundles(['procedure-administrationImport.js']) }}
 {% endblock javascripts %}
