feat(T29399): Reset initial from store, beautify some code names, rename vue file

--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/institution_tag_management.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/institution_tag_management.html.twig
@@ -6,8 +6,8 @@
         highlighted: 'admin_procedures'
     } %}
 
-    <institution-tag-list>
-    </institution-tag-list>
+    <institution-tag-management>
+    </institution-tag-management>
 
 {% endblock component_part %}
 
