--- a/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/list_statements.html.twig
+++ b/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/list_statements.html.twig
@@ -27,5 +27,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundle('statement-listStatements.js') }}
+    {{ webpackBundles(['statement-listStatements.js']) }}
 {% endblock javascripts %}
