fix (refs T29559): display the Rolename within the navBar->UserBox

--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_header_userbox.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_header_userbox.html.twig
@@ -81,6 +81,9 @@
                         {% if 'RCITIZ' in roles %}
                             <li class="font-size-smaller">{{ "role.citizen"|trans }}</li>
                         {% endif %}
+                        {% if 'RCOMAU' in roles %}
+                            <li class="font-size-smaller">{{ "role.cmu"|trans }}</li>
+                        {% endif %}
                         {% if 'RINTPA' in roles %}
                             <li class="font-size-smaller">{{ "role.prospect"|trans }}</li>
                         {% endif %}
