fix(refs T29770): Prevent submitting statements twice

--- a/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/includes/list_statement_nofity_contries.html.twig
+++ b/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/includes/list_statement_nofity_contries.html.twig
@@ -37,6 +37,7 @@
         data-cy="submitStatement"
         name="statementSubmit"
         :text="Translator.trans('statements.marked.submit')"
+        :disabled="isSubmitting"
         @click="dpValidateAction('{{ targetForm }}', () => submitForm('{{ targetForm }}', 'statementSubmit'), false)"
     ></dp-button>
 </div>
