--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/portal_profile.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/portal_profile.html.twig
@@ -16,16 +16,20 @@
 
     {% block personalData %}
 
-        <label>
-            {{ "username"|trans }}
-            <input class="{{ 'layout__item'|prefixClass }}" type="text" value="{{ user.username|default('-') }}" disabled>
-        </label>
+        {# If the User is logged in trough a Serviceprovider (via Keycloak) the Username is somehow Cryptic and leads to confusion.
+Therefor we want to hide it from the User #}
+        {% if not hasIdentityprovider %}
+            <label>
+                {{ "username"|trans }}
+                <input class="{{ 'layout__item'|prefixClass }}" type="text" value="{{ user.username|default('-') }}" disabled>
+            </label>
+        {% endif %}
 
         {% if hasPermission('area_mydata_organisation') %}
             <label>
                 {{ "organisation"|trans }}
                 <input class="{{ 'layout__item'|prefixClass }}" type="text" value="{{ user.orga.name|default('-') }}" disabled>
-                <input class="{{ 'layout__item'|prefixClass }}" type="hidden" name="organisationId" value="{{ user.orga.id|default("") }}">
+                <input class="{{ 'layout__item'|prefixClass }}" type="hidden" name="organisationId" value="{{ user.orga.id|default }}">
             </label>
             <label>
                 {{ "department"|trans }}
@@ -38,17 +42,17 @@
 
         <label>
             {{ "name"|trans }}
-            <input class="{{ 'layout__item u-pt-0_25'|prefixClass }}" type="text" name="lastname" value="{{ user.lastname|default("") }}">
+            <input class="{{ 'layout__item u-pt-0_25'|prefixClass }}" type="text" name="lastname" value="{{ user.lastname|default }}">
         </label>
 
         <label>
             {{ "name.first"|trans }}
-            <input class="{{ 'layout__item u-pt-0_25'|prefixClass }}" type="text" name="firstname" value="{{ user.firstname|default("") }}">
+            <input class="{{ 'layout__item u-pt-0_25'|prefixClass }}" type="text" name="firstname" value="{{ user.firstname|default }}">
         </label>
 
         <label>
             {{ "email"|trans }}
-            <input class="{{ 'layout__item u-pt-0_25'|prefixClass }}" type="text" name="email" value="{{ user.email|default("") }}">
+            <input class="{{ 'layout__item u-pt-0_25'|prefixClass }}" type="text" name="email" value="{{ user.email|default }}">
         </label>
 
     {% endblock personalData %}
@@ -60,12 +64,12 @@
                 {{ "newsletter"|trans }}
             </p>
             {% if hasPermission('feature_alternative_newsletter') %}
-            <p>
-                Mit unserem Newsletter erhalten Sie regelmäßig Informationen zu Neuigkeiten und
-                Schulungen unserer Beteiligungsplattform. Sie können diesen Service in jedem Newsletter wieder abbestellen.
-            </p>
+                <p>
+                    Mit unserem Newsletter erhalten Sie regelmäßig Informationen zu Neuigkeiten und
+                    Schulungen unserer Beteiligungsplattform. Sie können diesen Service in jedem Newsletter wieder abbestellen.
+                </p>
 
-            <a class="o-link--external" target="_blank" href="https://seu2.cleverreach.com/f/265969-264771/" rel="noopener noreferrer">{{ 'newsletter.subscribe'|trans }}</a>
+                <a class="o-link--external" target="_blank" href="https://seu2.cleverreach.com/f/265969-264771/" rel="noopener noreferrer">{{ 'newsletter.subscribe'|trans }}</a>
             {% else %}
                 {{ uiComponent('form.element', {
                     label: { text: 'newsletter.send.to.address'|trans({ address: projectName|wysiwyg }) },
