--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/portal_user.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/portal_user.html.twig
@@ -11,8 +11,11 @@
 
         {% block content %}
             {%- if hasPermission('area_mydata') %}
-                {%- include '@DemosPlanUser/DemosPlanUser/portal_profile.html.twig' -%}
+                {%- include '@DemosPlanUser/DemosPlanUser/portal_profile.html.twig' with {
+                    hasIdentityprovider: user.hasExternalIdentityProvider|default(false)
+                } -%}
 
+                {% if not user.hasExternalIdentityProvider  %}
                     {%- if hasPermission('feature_change_own_email') %}
                         <hr>
                         <dp-accordion
@@ -22,19 +25,25 @@
                                 {%- include '@DemosPlanUser/DemosPlanUser/portal_email.html.twig' -%}
                             </div>
                         </dp-accordion>
-                        {% endif -%}
+                    {% endif -%}
 
-                        {%- if hasPermission('area_mydata_password') %}
-                            <hr>
-                            <dp-accordion
-                                title="{{ 'password.change'|trans }}"
-                                class="u-mb u-mt-0_75">
-                                <change-password
-                                    class="u-mv"
-                                    user-id="{{ user.id|default }}">
-                                </change-password>
-                            </dp-accordion>
-                        {% endif -%}
+                    {%- if hasPermission('area_mydata_password') %}
+                        <hr>
+                        <dp-accordion
+                            title="{{ 'password.change'|trans }}"
+                            class="u-mb u-mt-0_75">
+                            <change-password
+                                class="u-mv"
+                                user-id="{{ user.id|default }}">
+                            </change-password>
+                        </dp-accordion>
+                    {% endif -%}
+                {% else %}
+                    {{ uiComponent('inline-notification', {
+                        message: 'email.and.password.editable.via.serviceprovier'|trans,
+                        type: 'warning'
+                    }) }}
+                {% endif %}
             {% endif -%}
         {% endblock content %}
 
