--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/portal_user.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/portal_user.html.twig
@@ -12,7 +12,7 @@
         {% block content %}
             {%- if hasPermission('area_mydata') %}
                 {%- include '@DemosPlanUser/DemosPlanUser/portal_profile.html.twig' with {
-                    hasIdentityprovider: user.hasExternalIdentityProvider|default(false)
+                    hasIdentityprovider: user.hasExternalIdentityProvider ?? false
                 } -%}
 
                 {% if not user.hasExternalIdentityProvider  %}
