chore: remove unused modules
after moving demosplan-ui into its own repo, some modules are
actually not used anymore and can be removed.

Others are still present, because styles are included here.

prosemirror-model, prosemirror-state and prosemirror-view were
never defined as direct dependency, because they came with
tiptap.

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_proceduresearch.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_proceduresearch.scss
@@ -43,7 +43,7 @@
         &__search-field {
             flex-grow: 1;
             max-width: calc(100% - 24px);
-            min-width: calc(37.5% - 24px); // Does not solve the "jumpy" behavior of vue-omnibox, but diminishes it.
+            min-width: calc(37.5% - 24px); // Does not solve the "jumpy" behavior of DpAutocomplete/vue-omnibox, but diminishes it.
         }
 
         &__search-btn {
