chore (refs T29990): adjust styling for statement attachments link list.

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/utility/_text.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/utility/_text.scss
@@ -136,7 +136,7 @@ $text-directions: (
 
 .whitespace {
     &--normal {
-        white-space: normal;
+        white-space: normal !important;
     }
 
     &--nowrap {
