--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/utility/_width.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/utility/_width.scss
@@ -32,7 +32,7 @@
 
 // Px-based classes like .width-160
 $width-map-px: (
-    'max-width': (350),
+    'max-width': (350, 600),
     'min-width': (25),
     'width': (16, 20, 25, 40, 60, 100, 120, 160, 200, 250, 300, 350, 450, 600)
 );
@@ -87,5 +87,9 @@ $width-map-percentage: (
 
     &-fit-content {
         width: fit-content;
+    }
+
+    &-max-content {
+        width: max-content;
     }
 }
