feat(T30217): style implementation for detail page (ADO 1937). New bundles are added to templates: public_detail.html.twig, map_public_participation.html.twig and pageheader.html.twig

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/token/_rounded.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/token/_rounded.scss
@@ -34,3 +34,5 @@ $dp-token-rounded-medium: 4px;
 // Use for boxes that purposefully should appear rounded - plays nice with
 // rounded elements inside it that are rounded via $dp-token-rounded-small.
 $dp-token-rounded-large: 5px;
+
+$dp-token-rounded-largest: 26px;
