--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/pageheader.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/pageheader.html.twig
@@ -74,22 +74,24 @@
             {% set classes = 'u-mv-0_5' %}
         {% endif %}
 
-        <div class="{{ (classes ~ ' ' ~ width_css.col2|default('u-3-of-4'|prefixClass) ~ ' layout__item u-1-of-1-lap-down u-pr u-pl-lap-up u-pl-0_5-palm u-pr-0_5-palm')|prefixClass }}">
+        {% block heading %}
+            <div class="{{ (classes ~ ' ' ~ width_css.col2|default('u-3-of-4'|prefixClass) ~ ' layout__item u-1-of-1-lap-down u-pr u-pl-lap-up u-pl-0_5-palm u-pr-0_5-palm')|prefixClass }}">
 
-            {# heading #}
-            <h1 class="{{ 'c-pageheader__title o-hellip display--block'|prefixClass }}" {% if aria_heading is defined and aria_heading != '' %}aria-label="{{ aria_heading }}"{% endif %}
-            >
-                {{ content_heading|wysiwyg }}
-            </h1>
+                {# heading #}
+                <h1 class="{{ 'o-hellip display--block'|prefixClass }}" {% if aria_heading is defined and aria_heading != '' %}aria-label="{{ aria_heading }}"{% endif %}
+                >
+                    {{ content_heading|wysiwyg }}
+                </h1>
 
-            {# subheading #}
-            {% if content_subheading|default != '' %}
-                <div class="{{ 'display--inline-block u-mt-0_25'|prefixClass }}">
-                    {{ content_subheading|wysiwyg }}
-                </div>
-            {% endif %}
+                {# subheading #}
+                {% if content_subheading|default != '' %}
+                    <div class="{{ 'display--inline-block u-mt-0_25'|prefixClass }}">
+                        {{ content_subheading|wysiwyg }}
+                    </div>
+                {% endif %}
 
-        </div>
+            </div>
+        {% endblock heading %}
 
     </header>
 
