--- a/templates/bundles/DemosPlanMapBundle/DemosPlanMap/map_public_participation_detail.html.twig
+++ b/templates/bundles/DemosPlanMapBundle/DemosPlanMap/map_public_participation_detail.html.twig
@@ -527,11 +527,13 @@
 
         <div id="mapProgress" class="{{ 'c-map--progress'|prefixClass }}"></div>
 
-        <div class="{{ 'c-map__zoom position--absolute'|prefixClass }} ol-zoom ol-unselectable ol-control">
-            <button id="mapCustomZoomIn" class="ol-zoom-in" type="button" title="{{ 'map.zoom.in'|trans }}" aria-label="{{ 'map.zoom.in'|trans }}">+</button>
-            <button id="mapCustomZoomReset" class="{{ 'zoom-reset'|prefixClass }}" type="button" title="{{ 'map.zoom.reset'|trans }}" aria-label="{{ 'map.zoom.reset'|trans }}">o</button>
-            <button id="mapCustomZoomOut" class="ol-zoom-out" type="button" title="{{ 'map.zoom.out'|trans }}" aria-label="{{ 'map.zoom.out'|trans }}">−</button>
-        </div>
+        {% block map_zoom_tools %}
+            <div class="{{ 'c-map__zoom position--absolute'|prefixClass }} ol-zoom ol-unselectable ol-control">
+                <button id="mapCustomZoomIn" class="ol-zoom-in" type="button" title="{{ 'map.zoom.in'|trans }}" aria-label="{{ 'map.zoom.in'|trans }}">+</button>
+                <button id="mapCustomZoomReset" class="{{ 'zoom-reset'|prefixClass }}" type="button" title="{{ 'map.zoom.reset'|trans }}" aria-label="{{ 'map.zoom.reset'|trans }}">o</button>
+                <button id="mapCustomZoomOut" class="ol-zoom-out" type="button" title="{{ 'map.zoom.out'|trans }}" aria-label="{{ 'map.zoom.out'|trans }}">−</button>
+            </div>
+        {% endblock map_zoom_tools %}
 
     </dp-map>
 </div>
