fix (refs T29692, T29694): Used translation key wasn't complete.

--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/portal_user.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/portal_user.html.twig
@@ -40,7 +40,7 @@
                     {% endif -%}
                 {% else %}
                     {{ uiComponent('inline-notification', {
-                        message: 'email.and.password.editable.via.serviceprovider'|trans,
+                        message: 'warning.email.and.password.editable.via.serviceprovider'|trans,
                         type: 'warning'
                     }) }}
                 {% endif %}
