chore (refs T30472): Add missing Selector.

--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_edit.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_edit.html.twig
@@ -276,6 +276,7 @@
                                     <dp-multiselect
                                         multiple
                                         id="r_authorizedUsers"
+                                        data-cy="selectedAuthUsers"
                                         :options="authUsersOptions"
                                         v-model="selectedAuthUsers"
                                         selection-controls
